bootstrap/node-config/components/mqtt2ws/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mqtt2ws
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"StatefulSet","name":"mqtt-broker-ss"}]'
  labels:
    app: mqtt2ws
    app.kubernetes.io/component: mqtt2ws
    app.kubernetes.io/instance: mqtt2ws
    app.kubernetes.io/name: mqtt2ws
    app.kubernetes.io/part-of: metrics-processors
    app.openshift.io/runtime: quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mqtt2ws
  template:
    metadata:
      labels:
        app: mqtt2ws
        deployment: mqtt2ws
    spec:
      containers:
        - name: mqtt2ws
          image: 'quay.io/oschneid/mqtt2ws:1.0'
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
