bootstrap/node-config/components/mqtt2ws/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mqtt2ws
  labels:
    app: mqtt2ws
    app.kubernetes.io/component: mqtt2ws
    app.kubernetes.io/instance: mqtt2ws
    app.kubernetes.io/name: mqtt2ws
spec:
  ports:
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: mqtt2ws
    deployment: mqtt2ws
