bootstrap/node-config/components/mqtt2ws/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: mqtt2ws
  labels:
    app: mqtt2ws
    app.kubernetes.io/component: mqtt2ws
    app.kubernetes.io/instance: mqtt2ws
    app.kubernetes.io/name: mqtt2ws
spec:
  to:
    kind: Service
    name: mqtt2ws
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
